test/fails/bad_functions/return_type9.lgl
tag a is vec2;

b f(a x) { // Unknown return type b
    return [0., 1., 2.];
}

void main() {
    return;
}